--- a/Consultorio/.settings/org.eclipse.wst.common.component
+++ b/Consultorio/.settings/org.eclipse.wst.common.component
@@ -9,7 +9,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
                 
         <property name="java-output-path" value="/ConsultorioM/build/classes"/>
-        <property name="context-root" value="Consultorio"/>
+        <property name="context-root" value="ConsultorioM"/>
             
     </wb-module>
     
