--- a/Consultorio/.settings/org.eclipse.wst.common.component
+++ b/Consultorio/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
         
-    <wb-module deploy-name="ConsultorioM-0.0.1-SNAPSHOT">
+    <wb-module deploy-name="Consultorio-0.0.1-SNAPSHOT">
                 
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
                 
@@ -8,8 +8,8 @@
                 
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
                 
-        <property name="java-output-path" value="/ConsultorioM/build/classes"/>
-        <property name="context-root" value="ConsultorioM"/>
+        <property name="java-output-path" value="/Consultorio/build/classes"/>
+        <property name="context-root" value="Consultorio"/>
             
     </wb-module>
     
