--- a/Consultorio/WebContent/WEB-INF/template/sidebar.xhtml
+++ b/Consultorio/WebContent/WEB-INF/template/sidebar.xhtml
@@ -7,6 +7,14 @@
 
 	<div class="layout-sidebar">
 		<ul id="layout-menu" class="layout-menu">
+			<li><h:link outcome="/cadastro">
+					<i class="pi pi-globe" />
+					<span>Cadastro de Usuário</span>
+				</h:link></li>
+			<li><h:link outcome="/login">
+					<i class="pi pi-globe" />
+					<span>Login</span>
+				</h:link></li>
 			<li><h:link outcome="/paciente">
 					<i class="pi pi-globe" />
 					<span>Cadastro do Paciente</span>
