--- a/WebContent/WEB-INF/template/sidebar.xhtml
+++ b/WebContent/WEB-INF/template/sidebar.xhtml
@@ -19,6 +19,14 @@
 					<i class="pi pi-globe" />
 					<span>Cadastro do Paciente</span>
 				</h:link></li>
+			<li><h:link outcome="/medico">
+					<i class="pi pi-globe" />
+					<span>Cadastro do Médico</span>
+				</h:link></li>
+			<li><h:link outcome="/especialidademedica">
+					<i class="pi pi-globe" />
+					<span>Cadastro da Especialidade</span>
+				</h:link></li>
 		</ul>
 	</div>
 </ui:composition>
