--- a/WebContent/WEB-INF/template/topbar.xhtml
+++ b/WebContent/WEB-INF/template/topbar.xhtml
@@ -8,7 +8,7 @@
             </a>
             <p:graphicImage name="layout/images/logo_consultorio.png" styleClass="topbar-logo" />
             
-            <h:link styleClass="topbar-link" outcome="/documentation">...</h:link>
+            <h:link styleClass="topbar-link" outcome="/documentation">Sair</h:link>
         </div>
     </div>
 
