--- a/WebContent/WEB-INF/template/topbar.xhtml
+++ b/WebContent/WEB-INF/template/topbar.xhtml
@@ -1,15 +1,26 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
     xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui">
 
-    <div class="layout-topbar">
-        <div class="layout-topbar-content">
-            <a href="#" id="menu-btn" class="menu-btn">
-                <i class="pi pi-bars"></i>
-            </a>
-            <p:graphicImage name="layout/images/logo_consultorio.png" styleClass="topbar-logo" />
-            
-            <h:link styleClass="topbar-link" outcome="/documentation">Sair</h:link>
-        </div>
-    </div>
+	<h:form styleClass="topbar-logo">
+		<div class="layout-topbar">
+			<div class="layout-topbar-content">
+				<a href="#" id="menu-btn" class="menu-btn"> <i
+					class="pi pi-bars"></i>
+				</a>
+				<p:graphicImage name="layout/images/logo_consultorio.png"
+					styleClass="topbar-logo" />
+				
+				<div style="float: right">
+				<h:outputLabel value="User: #{sessionScope.usuarioLogado.nome}" styleClass="topbar-logo"
+				style="padding-right: 10px;" rendered="#{loginController.isLogado()}"/>
+				<p:commandButton value="Sair" action="#{loginController.logout()}"
+					rendered="#{loginController.isLogado()}" styleClass="topbar-logo"
+					/>
+
+				</div>
+				
+			</div>
+		</div>
+	</h:form>
 
 </ui:composition>
