--- a/WebContent/WEB-INF/template/sidebar.xhtml
+++ b/WebContent/WEB-INF/template/sidebar.xhtml
@@ -7,11 +7,11 @@
 
 	<div class="layout-sidebar">
 		<ul id="layout-menu" class="layout-menu">
-			<li><h:link outcome="/paciente" rendered="#{loginController.permiteAcesso('Adm-Paciente')}">
+			<li><h:link outcome="/paciente" rendered="#{loginController.permiteAcesso('Adm')}">
 					<i class="pi pi-globe"/>
 					<span>Cadastro do Paciente</span>
 				</h:link></li>
-			<li><h:link outcome="/medico" rendered="#{loginController.permiteAcesso('Adm-Medico')}">
+			<li><h:link outcome="/medico" rendered="#{loginController.permiteAcesso('Adm')}">
 					<i class="pi pi-globe" />
 					<span>Cadastro do Médico</span>
 				</h:link></li>
