--- a/WebContent/WEB-INF/template/sidebar.xhtml
+++ b/WebContent/WEB-INF/template/sidebar.xhtml
@@ -7,15 +7,15 @@
 
 	<div class="layout-sidebar">
 		<ul id="layout-menu" class="layout-menu">
-			<li><h:link outcome="/paciente" rendered="#{loginController.permiteAcesso('Adm')}">
+			<li><h:link outcome="/paciente">
 					<i class="pi pi-globe"/>
 					<span>Cadastro do Paciente</span>
 				</h:link></li>
-			<li><h:link outcome="/medico" rendered="#{loginController.permiteAcesso('Adm')}">
+			<li><h:link outcome="/medico">
 					<i class="pi pi-globe" />
 					<span>Cadastro do Médico</span>
 				</h:link></li>
-			<li><h:link outcome="/especialidademedica" rendered="#{loginController.permiteAcesso('Adm')}">
+			<li><h:link outcome="/especialidademedica">
 					<i class="pi pi-globe" />
 					<span>Cadastro da Especialidade</span>
 				</h:link></li>
