--- a/WebContent/WEB-INF/template/topbar.xhtml
+++ b/WebContent/WEB-INF/template/topbar.xhtml
@@ -12,16 +12,14 @@
 					class="pi pi-bars"></i>
 				</a>
 				
-				<h:outputLink value="home.xhtml?faces-redirect=true">
+				<h:outputLink value="home.xhtml">
 				<p:graphicImage name="layout/images/logo_consultorio.png"
 					styleClass="topbar-logo" />
 				</h:outputLink>
 
 				<div style="float: right">
 					<p:commandLink value="User: #{sessionScope.usuarioLogado.nome}"
-						styleClass="topbar-logo" style="padding-right: 10px;"
-						rendered="#{loginController.isLogado()}"
-						action="#{loginController.paginaUser(sessionScope.usuarioLogado.id)}" />
+						styleClass="topbar-logo" style="padding-right: 10px;"/>
 					<p:commandButton value="Sair" action="#{loginController.logout()}"
 						rendered="#{loginController.isLogado()}" styleClass="topbar-logo" />
 
