--- a/WebContent/WEB-INF/template/sidebar.xhtml
+++ b/WebContent/WEB-INF/template/sidebar.xhtml
@@ -5,20 +5,9 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ph="http://primefaces.org/harmony">
 
-	<div class="layout-sidebar">
+	<div class="layout-sidebar" style="background-color: #f3f3f3;">
 		<ul id="layout-menu" class="layout-menu">
-			<li><h:link outcome="/paciente">
-					<i class="pi pi-globe"/>
-					<span>Cadastro do Paciente</span>
-				</h:link></li>
-			<li><h:link outcome="/medico">
-					<i class="pi pi-globe" />
-					<span>Cadastro do Médico</span>
-				</h:link></li>
-			<li><h:link outcome="/especialidademedica">
-					<i class="pi pi-globe" />
-					<span>Cadastro da Especialidade</span>
-				</h:link></li>
+			
 		</ul>
 	</div>
 </ui:composition>
