--- a/WebContent/WEB-INF/template/topbar.xhtml
+++ b/WebContent/WEB-INF/template/topbar.xhtml
@@ -30,7 +30,7 @@
 			<p:submenu label="Paciente" icon="pi pi-file">
 				<p:menuitem value="Listar" url="#" rendered="#{loginController.permiteAcesso('adm-medico')}" />
 				<p:separator />
-				<p:menuitem value="Anamnese" url="#" />
+				<p:menuitem value="Anamnese" url="anamnese.xhtml" />
 				<p:separator />
 				<p:menuitem value="Evolucão" url="#" />
 				<p:separator />
