--- a/WebContent/WEB-INF/template/topbar.xhtml
+++ b/WebContent/WEB-INF/template/topbar.xhtml
@@ -32,13 +32,13 @@
 				<p:separator />
 				<p:menuitem value="Anamnese" url="anamnese.xhtml" />
 				<p:separator />
-				<p:menuitem value="Evolucão" url="#" />
+				<p:menuitem value="Evolucão" url="evolucao.xhtml" />
 				<p:separator />
 				<p:menuitem value="Diagnóstico" url="#" />
 				<p:separator />
-				<p:menuitem value="Prescrições" url="#" />
+				<p:menuitem value="Prescrições" url="prescricoes.xhtml" />
 				<p:separator />
-				<p:menuitem value="Atestados" url="#" />
+				<p:menuitem value="Atestados" url="atestado.xhtml" />
 				<p:separator />
 				<p:menuitem value="Historico" url="#" />
 			</p:submenu>
