tentando add a agenda

--- a/WebContent/WEB-INF/template/topbar.xhtml
+++ b/WebContent/WEB-INF/template/topbar.xhtml
@@ -27,8 +27,20 @@
 				<p:menuitem value="Especialidade" outcome="/especialidademedica" icon="pi pi-globe"/>
 			</p:submenu>
 			
-			<p:submenu label="Paciente" icon="pi pi-file">
-				<p:menuitem value="Listar" url="#" rendered="#{loginController.permiteAcesso('adm-medico')}" />
+			<p:submenu label="Medico" icon="pi pi-file" >
+				<p:menuitem value="Exame(s)" url="exameMedico.xhtml" />
+				<p:separator />
+				<p:menuitem value="Listar Pacientes" url="#" />
+				<p:separator />
+				<p:menuitem value="Diagnosticar" url="#" />
+				<p:separator />
+				<p:menuitem value="Prescrições" url="prescricoes.xhtml" />
+				<p:separator />
+				<p:menuitem value="Atestados" url="atestado.xhtml" />
+			</p:submenu>
+			
+			<p:submenu label="Paciente" icon="pi pi-file"  >
+				<p:menuitem value="Exame(s)" url="examePaciente.xhtml" />
 				<p:separator />
 				<p:menuitem value="Anamnese" url="anamnese.xhtml" />
 				<p:separator />
@@ -36,14 +48,14 @@
 				<p:separator />
 				<p:menuitem value="Diagnóstico" url="#" />
 				<p:separator />
-				<p:menuitem value="Prescrições" url="prescricoes.xhtml" />
-				<p:separator />
 				<p:menuitem value="Atestados" url="atestado.xhtml" />
 				<p:separator />
 				<p:menuitem value="Historico" url="#" />
 			</p:submenu>
 
-			<p:menuitem value="Agenda" url="#" icon="pi pi-calendar-plus" />
+			<p:menuitem value="Agenda Medica" url="agendaMedico.xhtml" icon="pi pi-calendar-plus" rendered="#{loginController.permiteAcesso('adm-medico')}"/>
+
+			<p:menuitem value="Agenda Paciente" url="agendaPaciente.xhtml" icon="pi pi-calendar-plus" rendered="#{loginController.permiteAcesso('adm-paciente')}" />
 			
 			<p:menuitem value="Financeiro" url="#" icon="pi pi-dollar" />
 
