--- a/WebContent/resources/primefaces-luna-amber/_variables.scss
+++ b/WebContent/resources/primefaces-luna-amber/_variables.scss
@@ -5,7 +5,8 @@ $primaryDarkestColor:#FF8F00;
 $primaryTextColor:#212121;
 
 //global
-$fontFamily:"Open Sans","Helvetica Neue",sans-serif;
+//$fontFamily:"Open Sans","Helvetica Neue",sans-serif;
+$fontFamily: 'Roboto Condensed', sans-serif;
 $fontSize:14px;
 $textColor:#dedede;
 $textSecondaryColor:#888888;
