--- a/WebContent/resources/primefaces-mytheme/_variables.scss
+++ b/WebContent/resources/primefaces-mytheme/_variables.scss
@@ -1,11 +1,11 @@
 //main color scheme
-$primaryColor:#007ad9;
-$primaryDarkerColor:#116fbf;
+$primaryColor:#355691;
+$primaryDarkerColor:#355691;
 $primaryDarkestColor:#005b9f;
 $primaryTextColor:#ffffff;
 
 //global
-$fontFamily:"Open Sans","Helvetica Neue",sans-serif;
+$fontFamily:'Roboto Condensed', sans-serif;
 $fontSize:14px;
 $textColor:#333333;
 $textSecondaryColor:lighten($textColor,25%);
