--- a/WebContent/resources/layout/style/layout.scss
+++ b/WebContent/resources/layout/style/layout.scss
@@ -6,9 +6,9 @@
 
 body {
     font-family: "Open Sans","Helvetica Neue",sans-serif;
-    color: #333333;
+    color: #f0f0f0;
     font-size: 14px;
-    background-color: #f3f3f3;
+    background-color: #383636;
     padding: 0;
     margin: 0;
 
@@ -29,11 +29,11 @@ body {
         @include shadow(0 0 16px 0 rgba(0, 0, 0, 0.16));
 
         .layout-topbar-content {
-            padding: 10px 20px;
+            padding: 10px 10px;
             position: relative;
 
             .topbar-logo {
-                height: 40px;
+                height: 10px;
                 vertical-align: middle;
             }
     
@@ -64,7 +64,7 @@ body {
         }
     }
 
-    .layout-sidebar {
+    /*.layout-sidebar {
         position: fixed;
         left: 0;
         top: 60px;
@@ -73,6 +73,7 @@ body {
         height: 100%;
         z-index: 1000;
         @include shadow(0 0 16px 0 rgba(0, 0, 0, 0.16));
+
 
         .layout-menu {
             list-style: none;
@@ -117,10 +118,11 @@ body {
             }
         }
     }
+*/
 
     .layout-content {
         margin-left: 250px;
-        padding: 84px 24px 24px 24px;
+        padding: 25px 24px 24px 24px;
     }
 
     .layout-footer {
@@ -134,7 +136,7 @@ body {
 
 .card {
     border-radius: 3px;
-    background: #ffffff;
+    background: #323232;
     padding: 16px;
     margin-bottom: 16px;
     
@@ -187,14 +189,14 @@ body {
             }
         }
 
-        .layout-sidebar {
+        /*.layout-sidebar {
             left: -250px;
 
             &.layout-sidebar-active {
                 left: 0;
                 width: 100%;
             }
-        }
+        }*/
 
         .layout-content {
             margin-left: 0;
