--- a/WebContent/WEB-INF/template/topbar.xhtml
+++ b/WebContent/WEB-INF/template/topbar.xhtml
@@ -57,7 +57,7 @@
 			
 			<p:menuitem value="Financeiro" url="#" icon="pi pi-dollar" />
 
-			<p:menuitem value="Relatório" url="#" icon="pi pi-chart-bar" />
+			<p:menuitem value="Relatório" url="pacientesReport" icon="pi pi-chart-bar" />
 
 			<f:facet name="options">
 				<p:commandButton icon="pi pi-user" value="#{sessionScope.usuarioLogado.nome}"
