--- a/WebContent/reports/Paciente.jrxml
+++ b/WebContent/reports/Paciente.jrxml
@@ -46,7 +46,7 @@ ORDER BY pes.nome]]>
 			<frame>
 				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#383636" uuid="37ebb9ff-db15-4ca3-a977-e9cdfe8ab157"/>
 				<staticText>
-					<reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="b0ec3f97-5758-426c-92f6-dd156d2f608a"/>
+					<reportElement x="74" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="b0ec3f97-5758-426c-92f6-dd156d2f608a"/>
 					<textElement>
 						<font size="34" isBold="true"/>
 					</textElement>
@@ -59,6 +59,10 @@ ORDER BY pes.nome]]>
 					</textElement>
 					<text><![CDATA[Lista de Paciente]]></text>
 				</staticText>
+				<image>
+					<reportElement x="20" y="13" width="50" height="50" uuid="85fb9fb7-837f-415d-b3e6-b8ec5562ac31"/>
+					<imageExpression><![CDATA["logo_consultorio.png"]]></imageExpression>
+				</image>
 			</frame>
 		</band>
 	</title>
