--- a/WebContent/WEB-INF/template/topbar.xhtml
+++ b/WebContent/WEB-INF/template/topbar.xhtml
@@ -55,7 +55,7 @@
 
 			<p:menuitem value="Agenda" url="agenda.xhtml" icon="pi pi-calendar-plus" />
 			
-			<p:menuitem value="Financeiro" url="#" icon="pi pi-dollar" />
+			<p:menuitem value="Financeiro" url="financeiro.xhtml" icon="pi pi-dollar" />
 
 			<p:menuitem value="Relatório" url="pacientesReport" icon="pi pi-chart-bar" />
 
